--- a/report/static/main.css
+++ b/report/static/main.css
@@ -1,6 +1,12 @@
 body {
+  border-top: 3px solid black;
+  padding: 0;
+  margin: 0;
+}
+
+#main {
   width: 80%;
-  margin: 60px auto;
+  margin: 80px auto;
 }
 
 #title {
@@ -8,8 +14,53 @@ body {
   font-size: 2.5em;
 }
 
+.h {
+  text-align: center;
+  font-size: 2em;
+  text-decoration: underline;
+}
+
 #members {
+  font-size: 1.2em;
   margin-top: 20px;
   text-align: center;
   font-style: italic;
+}
+
+#university {
+  margin-top: 16px;
+  text-align: center;
+  font-style: italic;
+}
+
+#demo-section {
+  width: 80%;
+  margin: 60px auto 10px;
+}
+
+#demo-section img {
+  width: 100%;
+  border: 1px solid #ccc;
+}
+
+#links-section {
+  text-align: center;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: underline;
+  color: #666;
+}
+
+#intro-section {
+  width: 70%;
+  margin: 60px auto;
+}
+
+#intro-section p {
+  line-height: 150%;
+  /*font-size: 1em;*/
 }
